2003-11-11  Martin Baulig  <martin@ximian.com>

	* mono-debug.c (mono_debug_add_type): Ignore unknown modules.

2003-11-11  Martin Baulig  <martin@ximian.com>

	* reflection.c (mono_reflection_inflate_method_or_ctor): Allow
	"MonoInflatedMethod" and "MonoInflatedCtor".

2003-11-11  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c (resolution_scope_from_image): Use the assembly table
	from the manifest module, since other modules don't have it.

	* debug-helpers.c (mono_type_full_name): New helper function.

	* image.h (MonoAssembly): Change 'dynamic' to a boolean.

	* image.c (mono_image_load_file_for_image): New public function which
	is a replacement for the load_file_for_image in class.c.

	* assembly.c (mono_assembly_load_module): A wrapper for the function
	above which does assembly association and reference loading too.

	* class.c (mono_class_from_name): Call mono_assembly_load_module.

2003-11-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* appdomain.c: not all of the attributes for the full assembly name
	are required and the order doesn't matter. Fixes bug #50787.

2003-11-10  Dick Porter  <dick@ximian.com>

	* locales.c: Use platform-endian UTF16

2003-11-10  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c: Emit FILE and EXPORTEDTYPE tables.
	
2003-11-10  Martin Baulig  <martin@ximian.com>

	* metadata.c
	(mono_metadata_load_generic_params): Make this actually work.

	* reflection.c (mono_reflection_bind_generic_parameters): If our
	parent is a generic instance, pass all the `types' to it, no
	matter whether it has the same number of type parameters or not.

2003-11-10  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c: Emit FILE and EXPORTEDTYPE tables.

	* assembly.c (mono_assembly_load_references): Move the image<->assembly
	assignment code to this function so it gets called recursively for all
	modules.

	* image.c (load_modules): Remove the assembly assignment since it is
	now done by mono_assembly_load_references.
	